tutorial/sec/admission-webhook/manifest/validating/pod-allow.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    app: busybox
    owner: you-know-who
spec:
  containers:
    - image: busybox
      command:
        - sleep
        - "36000"
      imagePullPolicy: IfNotPresent
      name: busybox
  restartPolicy: Always
