tutorial/sec/admission-webhook/manifest/validating/pod-denied.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    app: busybox
spec:
  containers:
    - image: busybox
      command:
        - sleep
        - "36000"
      imagePullPolicy: IfNotPresent
      name: busybox
  restartPolicy: Always
