tutorial/sec/admission-webhook/manifest/validating/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  namespace: webhook-demo
  labels:
    app: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      containers:
        - name: webhook-server
          image: lyzhang1999/webhook-admission-example
          ports:
            - containerPort: 3000
              name: webhook-api
          volumeMounts:
            - mountPath: "/source"
              name: webhook-certs
              readOnly: true
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
      serviceAccount: webhook-demo-sa
      volumes:
        - name: webhook-certs
          secret:
            secretName: webhook-certs
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
  namespace: webhook-demo
spec:
  selector:
    app: webhook-server
  ports:
    - port: 443
      targetPort: webhook-api
