tutorial/sec/admission-webhook/manifest/validating/validating-webhook-configuration.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "webhook-server.webhook-demo.svc"
webhooks:
  - name: "webhook-server.webhook-demo.svc"
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE"]
        resources:   ["pods"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: "webhook-demo"
        name: "webhook-server"
        path: "/validate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGVENDQWYyZ0F3SUJBZ0lVUUNkOXNFdDVJdGJEQXBkVUhpUVNnUDgrYWxFd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dqRVlNQllHQTFVRUF3d1BWMlZpYUc5dmF5QkVaVzF2SUVOQk1CNFhEVEl6TURrek1ERXpNalF6TWxvWApEVEl6TVRBek1ERXpNalF6TWxvd0dqRVlNQllHQTFVRUF3d1BWMlZpYUc5dmF5QkVaVzF2SUVOQk1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXJDUHJWeFJJUDVQYnZZTkJ1OTljZWlnUURid3UKcEJuQTU0TVF1RVdnUlY1cDF0b1JEcTJ2MEtUN2haVGhnMWFBdVJnZDFYRlo3WHhPVWlRR1Jna0lNSHZ1YjJYegptcTlPMWF0TUx [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 10
